--- a/Nmm2Bcr.csproj
+++ b/Nmm2Bcr.csproj
@@ -52,6 +52,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classifier.cs" />
+    <Compile Include="IntensityEvaluator.cs" />
     <Compile Include="Options.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
