Channel suffix to filename
The channel symbol is suffixed to the output filename. Only for the height channel the suffix is supressed.

--- a/Nmm2Bcr.csproj
+++ b/Nmm2Bcr.csproj
@@ -10,7 +10,7 @@
     <AssemblyName>Nmm2Bcr</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <Deterministic>true</Deterministic>
+    <Deterministic>false</Deterministic>
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
